# rs-cluster

./: Cargo.toml  Makefile  README.md
src/: error.rs  lib.rs  main.rs
src/app/: app.rs
src/config/: config.rs
src/module/: mod.rs
src/module/asr/: asr.rs  error.rs  mod.rs
src/routes/: act_voice.rs  mod.rs  router.rs  state.rs
tests/: api.http
