[package]
name = "rs-cluster"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.140"
axum = "0.8.3"
dotenv = "0.15.0"
dotenv_config = "0.2.1"
env_logger = "0.11.7"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }


[profile.release]
lto = true
strip = true
opt-level = "z"
